Alterações no index do código

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             <li><i class="fa-brands fa-html5"></i> HTML5</li>
             <li><i class="fa-brands fa-css3-alt"></i> CSS3</li>
             <li><i class="fa-brands fa-js"></i> JAVASCRIPT</li>
+            <li><i class="fa-brands fa-react"></i> REACT-JS <i class="fa-solid fa-spinner fa-spin-pulse"></i> </li>
+            <li><i class="fa-brands fa-git"></i> GIT</li>
+            <li><i class="fa-brands fa-github"></i> GITHUB</li>
+            
+
+
+           <!-- <i class="fa-brands fa-github"></i> -->
         </ul><br>
 
         <ul><br>
