Modificação na index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="projetos">
         <h2>LINKs RÁPIDOS DOS MEUS PROJETOS.</h2><br>
 
-        <a href="" id="projetoum"><button>SITE ANIME XX</button></a>
+        <a href="https://luandevweb.github.io/instagram/" target="_blank"><button>INSTAGRAM</button></a>
 
 
     </div>
