Alterações necessárias na home

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilo.css">
     <link rel="stylesheet" href="./src/css/responsivo.css">
+    <link rel="shortcut icon" href="./src/img/FAVICON.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ea20ed569c.js" crossorigin="anonymous"></script>
     
 </head>
@@ -109,9 +110,9 @@
     <div class="projetos">
         <h2>LINKs RÁPIDOS DOS MEUS PROJETOS.</h2><br>
 
-        <a href="https://luandevweb.github.io/instagram/" target="_blank"><button>INSTAGRAM</button></a>
+        <a class="bizus_links" href="https://luandevweb.github.io/instagram/" target="_blank"><button>INSTAGRAM</button></a>
 
-        <a href="https://luandevweb.github.io/faceb00k/" target="_blank"><button>Facebook</button></a>
+        <a class="bizus_links" href="https://luandevweb.github.io/faceb00k/" target="_blank"><button>FACEBOOK</button></a>
 
 
     </div>
