Alterações da home

--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@
     </div>
 
     <div class="projetos">
-        <h2>LINKs RÁPIDOS DOS MEUS PROJETOS.</h2><br>
+        <h2>Oi, tudo bem? irei te deixar abaixo os links para os meus projetos, alguns clones e outros autorais. Desenvolvi eles para colocar no meu portfólio, basta clicar e apreciar!</h2><br><br>
 
         <a class="bizus_links" href="https://luandevweb.github.io/instagram/" target="_blank"><button>INSTAGRAM</button></a>
 
         <a class="bizus_links" href="https://luandevweb.github.io/faceb00k/" target="_blank"><button>FACEBOOK</button></a>
+
+        <a class="bizus_links" href="https://luandevweb.github.io/faceb00k/" target="_blank"><button>Banco do Brasil (MOBILE)</button></a>
 
 
     </div>
