--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <a class="bizus_links" href="https://luandevweb.github.io/faceb00k/" target="_blank"><button>FACEBOOK</button></a>
 
-        <a class="bizus_links" href="https://luandevweb.github.io/faceb00k/" target="_blank"><button>Banco do Brasil (MOBILE)</button></a>
+        <a class="bizus_links" href="https://luandevweb.github.io/bb/" target="_blank"><button>Banco do Brasil (MOBILE)</button></a>
 
 
     </div>
@@ -129,6 +129,6 @@ luandevweb@gmail.com
 
 
 </footer>
-<script src="./src/js/index.js"></script>
+<!-- <script src="./src/js/index.js"></script> -->
 </body>
 </html>
